--- a/script/fillgeoloc.ipynb
+++ b/script/fillgeoloc.ipynb
@@ -47,6 +47,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "778f64ed-931f-4151-a476-209d819e80b0",
+   "metadata": {},
+   "source": [
+    "# Ajouter des données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0ff205f-84cc-4651-8107-7dbf7f653bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"INSERT INTO your_table (column1, column2, column3) VALUES (%s, %s, %s)\"\n",
+    "data = (\"value1\", \"value2\", \"value3\")\n",
+    "cur.execute(query, data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "4bb6fea7-35a9-462c-8b45-9a7a9556760e",
