--- a/script/fillgeoloc.ipynb
+++ b/script/fillgeoloc.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b7ee05f7-5240-432e-b984-e617696e7877",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import psycopg2"
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "db547704-2f9a-4887-b299-d890b7557b6e",
    "metadata": {
     "tags": []
@@ -47,35 +49,392 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "778f64ed-931f-4151-a476-209d819e80b0",
-   "metadata": {},
-   "source": [
-    "# Ajouter des données"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0ff205f-84cc-4651-8107-7dbf7f653bab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"INSERT INTO your_table (column1, column2, column3) VALUES (%s, %s, %s)\"\n",
-    "data = (\"value1\", \"value2\", \"value3\")\n",
-    "cur.execute(query, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4bb6fea7-35a9-462c-8b45-9a7a9556760e",
+   "execution_count": 10,
+   "id": "f7abdac3-7c1e-417d-97c9-9b96962e6ff9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cur = conn.cursor()"
+    "engine = create_engine('postgresql+psycopg2://', creator=lambda: conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3442be6e-072c-496a-88cf-f50a9d8ca8d9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "52bd2e69-e8d6-4eca-9b8b-75a05ce4d10b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "datageoloc = pd.read_csv('data/olist_geolocation_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4ab3c12d-6c5f-4805-9589-f97c7c1bf587",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geolocation_zip_code_prefix</th>\n",
+       "      <th>geolocation_lat</th>\n",
+       "      <th>geolocation_lng</th>\n",
+       "      <th>geolocation_city</th>\n",
+       "      <th>geolocation_state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1037</td>\n",
+       "      <td>-23.545621</td>\n",
+       "      <td>-46.639292</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1046</td>\n",
+       "      <td>-23.546081</td>\n",
+       "      <td>-46.644820</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1046</td>\n",
+       "      <td>-23.546129</td>\n",
+       "      <td>-46.642951</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1041</td>\n",
+       "      <td>-23.544392</td>\n",
+       "      <td>-46.639499</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1035</td>\n",
+       "      <td>-23.541578</td>\n",
+       "      <td>-46.641607</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   geolocation_zip_code_prefix  geolocation_lat  geolocation_lng   \n",
+       "0                         1037       -23.545621       -46.639292  \\\n",
+       "1                         1046       -23.546081       -46.644820   \n",
+       "2                         1046       -23.546129       -46.642951   \n",
+       "3                         1041       -23.544392       -46.639499   \n",
+       "4                         1035       -23.541578       -46.641607   \n",
+       "\n",
+       "  geolocation_city geolocation_state  \n",
+       "0        sao paulo                SP  \n",
+       "1        sao paulo                SP  \n",
+       "2        sao paulo                SP  \n",
+       "3        sao paulo                SP  \n",
+       "4        sao paulo                SP  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datageoloc.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30e40bde-0385-480c-9cf1-90db7c53b227",
+   "metadata": {},
+   "source": [
+    "# Write in database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19dfbaec-ed91-481b-b55f-89f4f6b08506",
+   "metadata": {},
+   "source": [
+    "## State"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dfaadd18-fcbc-4a5a-8ace-7d8c796f15fb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "table_name = 'olist_state'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c9a62323-916d-4852-9269-e54097211012",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "state = pd.DataFrame(datageoloc['geolocation_state'].unique(), columns=['state_code'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5f7e638c-5bce-41f9-8cc7-cb9886444a07",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>MG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>AM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>RR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>GO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>RO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>TO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>MT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>MS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>RS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>SC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   state_code\n",
+       "0          SP\n",
+       "1          RN\n",
+       "2          AC\n",
+       "3          RJ\n",
+       "4          ES\n",
+       "5          MG\n",
+       "6          BA\n",
+       "7          SE\n",
+       "8          PE\n",
+       "9          AL\n",
+       "10         PB\n",
+       "11         CE\n",
+       "12         PI\n",
+       "13         MA\n",
+       "14         PA\n",
+       "15         AP\n",
+       "16         AM\n",
+       "17         RR\n",
+       "18         DF\n",
+       "19         GO\n",
+       "20         RO\n",
+       "21         TO\n",
+       "22         MT\n",
+       "23         MS\n",
+       "24         RS\n",
+       "25         PR\n",
+       "26         SC"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4bb6fea7-35a9-462c-8b45-9a7a9556760e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'to_sql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_sql\u001b[49m(table_name, engine, if_exists\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mappend\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'to_sql'"
+     ]
+    }
+   ],
+   "source": [
+    "state.to_sql(table_name, engine, if_exists='append', index=False)"
    ]
   },
   {
@@ -93,6 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "conn.commit()\n",
     "cur.close()\n",
     "conn.close()"
    ]
