group zip code en fonction des villes et états différents

--- a/script/exploredata.ipynb
+++ b/script/exploredata.ipynb
@@ -358,6 +358,38 @@
    "source": [
     "# Le nom d'une ville peut se retrouver dans des states différents"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf2b79c-a9db-4c90-a647-91b32bf946fc",
+   "metadata": {},
+   "source": [
+    "## group zip code en fonction des villes et états différents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eef8343-0f5b-442f-87af-27c813fd783a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Create a new column with the combination of geolocation_city and geolocation_state\n",
+    "df['city_and_state'] = df['geolocation_city'] + '_' + df['geolocation_state']\n",
+    "\n",
+    "# Create a dictionary with the prefixes that have different city_and_state combinations\n",
+    "prefixes_dict = {}\n",
+    "for prefix, group in df.groupby('geolocation_zip_code_prefix'):\n",
+    "    if len(group['city_and_state'].unique()) > 1:S\n",
+    "        prefixes_dict[prefix] = group['city_and_state'].unique()\n",
+    "\n",
+    "# Create a new dataframe with the prefixes and their corresponding city_and_state combinations\n",
+    "prefixes_df = pd.DataFrame(list(prefixes_dict.items()), columns=['geolocation_zip_code_prefix', 'city_and_state_combinations'])\n",
+    "\n",
+    "# Print the resulting dataframe\n",
+    "print(prefixes_df)"
+   ]
   }
  ],
  "metadata": {
