--- a/script/fillgeoloc.ipynb
+++ b/script/fillgeoloc.ipynb
@@ -191,7 +191,9 @@
   {
    "cell_type": "markdown",
    "id": "30e40bde-0385-480c-9cf1-90db7c53b227",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Write in database"
    ]
@@ -200,7 +202,6 @@
    "cell_type": "markdown",
    "id": "19dfbaec-ed91-481b-b55f-89f4f6b08506",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "dfaadd18-fcbc-4a5a-8ace-7d8c796f15fb",
    "metadata": {
     "tags": []
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "c9a62323-916d-4852-9269-e54097211012",
    "metadata": {
     "tags": []
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "5f7e638c-5bce-41f9-8cc7-cb9886444a07",
    "metadata": {
     "tags": []
@@ -407,7 +408,7 @@
        "26         SC"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "4bb6fea7-35a9-462c-8b45-9a7a9556760e",
    "metadata": {
     "tags": []
@@ -430,7 +431,7 @@
        "27"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "7ca406eb-6607-4f19-9895-a10f1ee25481",
    "metadata": {
     "tags": []
@@ -463,19 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "9fe36973-d74f-4bff-8602-178ff8891317",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "zipcode = pd.DataFrame('zip_code_prefix': datageoloc['geolocation_zip_code_prefix'].unique())"
+    "zipcode = pd.DataFrame({'zip_code_prefix': datageoloc['geolocation_zip_code_prefix'].unique()})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "050e8de6-63d7-4e05-8275-02025d421039",
    "metadata": {
     "tags": []
@@ -539,7 +540,7 @@
        "4             1012"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "a519388a-bde8-4701-b4f8-4e8c63c638f3",
    "metadata": {
     "tags": []
@@ -562,7 +563,7 @@
        "(19015, 1)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "68668c97-9a76-4e8e-8ee6-d0adccbae21a",
    "metadata": {
     "tags": []
@@ -585,7 +586,7 @@
        "15"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +599,6 @@
    "cell_type": "markdown",
    "id": "0aad26b3-14ce-4dbc-a620-21a560a123d3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "7b7b7bc8-849f-4344-b7ed-db2520fb0a46",
    "metadata": {
     "tags": []
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "549462a5-4b99-453e-9fe6-f10aadb6658a",
    "metadata": {
     "tags": []
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "8dafb133-7ffe-4d57-a5f4-78f8435f04c1",
    "metadata": {
     "tags": []
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "fd8a94fc-a6d5-4b4e-b5c8-0786ed9cc09c",
    "metadata": {
     "tags": []
@@ -713,7 +713,7 @@
        "50999                jundiaí                SP"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "dd34228e-e998-40d2-9f30-aee19cdd26d9",
    "metadata": {
     "tags": []
@@ -736,7 +736,7 @@
        "(8463, 2)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "1f0a2f68-1119-4df3-9fd8-19568322e209",
    "metadata": {
     "tags": []
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "254cb0d0-2f67-4a1e-9412-bd4f9bb8fbf0",
    "metadata": {
     "tags": []
@@ -790,7 +790,7 @@
        "463"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,6 @@
    "cell_type": "markdown",
    "id": "20b7cf7a-802f-400b-9475-b6e4e1e9aff7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -812,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "d3d60ea3-571a-43e6-bd31-126200a28e27",
    "metadata": {
     "tags": []
@@ -824,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "4dc793f1-be00-4c04-a1ae-b668a5ff2bdf",
    "metadata": {
     "tags": []
@@ -836,19 +835,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "43254586-9804-4bbd-aa00-28881d4fa621",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cityzipcode = datageoloc[select_col].drop_duplicates()"
+    "cityzipcode = datageoloc[select_col].drop_duplicates()\n",
+    "cols_name = ['city_name', 'state_code', 'zip_code_prefix']\n",
+    "cityzipcode.columns = cols_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "2cd01f5a-c14f-44d9-8d91-d14077454759",
    "metadata": {
     "tags": []
@@ -875,9 +876,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>geolocation_city</th>\n",
-       "      <th>geolocation_state</th>\n",
-       "      <th>geolocation_zip_code_prefix</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>zip_code_prefix</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -916,15 +917,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  geolocation_city geolocation_state  geolocation_zip_code_prefix\n",
-       "0        sao paulo                SP                         1037\n",
-       "1        sao paulo                SP                         1046\n",
-       "3        sao paulo                SP                         1041\n",
-       "4        sao paulo                SP                         1035\n",
-       "5        são paulo                SP                         1012"
+       "   city_name state_code  zip_code_prefix\n",
+       "0  sao paulo         SP             1037\n",
+       "1  sao paulo         SP             1046\n",
+       "3  sao paulo         SP             1041\n",
+       "4  sao paulo         SP             1035\n",
+       "5  são paulo         SP             1012"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "id": "c7947e91-4e0c-42b0-9f7d-2ed73304c9d4",
    "metadata": {
     "tags": []
@@ -955,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "id": "85e98a97-ca98-4d40-8832-56fc07e704f7",
    "metadata": {
     "tags": []
@@ -967,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "id": "60afbeac-ddc5-406e-919b-bed84436601a",
    "metadata": {
     "tags": []
@@ -976,8 +977,10 @@
    "source": [
     "def getCityId(row):\n",
     "    # Exécution de la requête SQL pour récupérer la valeur correspondant aux valeurs de colonne1 et colonne2 de la ligne\n",
+    "    #print(row[\"city_name\"] + \" - \" + row[\"state_code\"], end=\"\")\n",
     "    cur.execute(query, (row[\"city_name\"], row[\"state_code\"]))\n",
     "    value = cur.fetchone()[0]\n",
+    "    #print(\" = \" + str(value))\n",
     "    # Retourne la valeur pour ajouter une nouvelle colonne au DataFrame\n",
     "    return value\n",
     "\n",
@@ -986,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "id": "e98d0c54-8517-4d4d-9c3f-6aae6aeb6b1d",
    "metadata": {
     "tags": []
@@ -1013,9 +1016,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>geolocation_city</th>\n",
-       "      <th>geolocation_state</th>\n",
-       "      <th>geolocation_zip_code_prefix</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>zip_code_prefix</th>\n",
        "      <th>city_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1103,36 +1106,23 @@
        "</div>"
       ],
       "text/plain": [
-       "             geolocation_city geolocation_state  geolocation_zip_code_prefix   \n",
-       "0                   sao paulo                SP                         1037  \\\n",
-       "1                   sao paulo                SP                         1046   \n",
-       "3                   sao paulo                SP                         1041   \n",
-       "4                   sao paulo                SP                         1035   \n",
-       "5                   são paulo                SP                         1012   \n",
-       "...                       ...               ...                          ...   \n",
-       "999806                 ibiaçá                RS                        99940   \n",
-       "999846   santa cecilia do sul                RS                        99952   \n",
-       "999867                ciríaco                RS                        99970   \n",
-       "999891                estação                RS                        99930   \n",
-       "1000046          vila lângaro                RS                        99955   \n",
-       "\n",
-       "         city_id  \n",
-       "0              1  \n",
-       "1              1  \n",
-       "3              1  \n",
-       "4              1  \n",
-       "5              2  \n",
-       "...          ...  \n",
-       "999806      8459  \n",
-       "999846      8460  \n",
-       "999867      8461  \n",
-       "999891      8462  \n",
-       "1000046     8463  \n",
+       "                    city_name state_code  zip_code_prefix  city_id\n",
+       "0                   sao paulo         SP             1037        1\n",
+       "1                   sao paulo         SP             1046        1\n",
+       "3                   sao paulo         SP             1041        1\n",
+       "4                   sao paulo         SP             1035        1\n",
+       "5                   são paulo         SP             1012        2\n",
+       "...                       ...        ...              ...      ...\n",
+       "999806                 ibiaçá         RS            99940     8459\n",
+       "999846   santa cecilia do sul         RS            99952     8460\n",
+       "999867                ciríaco         RS            99970     8461\n",
+       "999891                estação         RS            99930     8462\n",
+       "1000046          vila lângaro         RS            99955     8463\n",
        "\n",
        "[27912 rows x 4 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 30,
    "id": "5355c4dd-9b45-4a0f-85ee-2b336f2623e6",
    "metadata": {
     "tags": []
@@ -1166,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 31,
    "id": "c8a0cdf6-30a9-4da7-95fb-20381d1419ef",
    "metadata": {
     "tags": []
@@ -1178,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 32,
    "id": "ff352534-0339-4ea1-9d64-6a3073fdcbf5",
    "metadata": {
     "tags": []
@@ -1248,7 +1238,7 @@
        "5        2             1012"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 33,
    "id": "d376ab33-5065-4361-9edd-5685aef229c1",
    "metadata": {
     "tags": []
@@ -1279,7 +1269,7 @@
        "912"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "9d83aabd-7bd0-434f-ab62-15d70712aab9",
    "metadata": {
     "tags": []
@@ -1318,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "8884b2d7-246c-43da-9888-e3cdc46e41b7",
    "metadata": {
     "tags": []
@@ -1330,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "56ffed7a-f5bc-4009-854f-f68e1e9a9016",
    "metadata": {
     "tags": []
@@ -1406,7 +1396,7 @@
        "4        5                jundiaí         SP"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "2940dd34-60a1-4beb-b4b5-477fef90ccc0",
    "metadata": {
     "tags": []
@@ -1437,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "d8b68e33-843f-4b3d-91e6-bcd42993c387",
    "metadata": {
     "tags": []
@@ -1450,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "7a0c2a09-16b4-4abd-a8cd-010d656cfe1e",
    "metadata": {
     "tags": []
@@ -1532,7 +1522,7 @@
        "4       -23.541578       -46.641607  sao paulo         SP"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "3434180b-3baf-4430-beb6-1cc63a50a3af",
    "metadata": {
     "tags": []
@@ -1555,7 +1545,7 @@
        "(1000163, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "90515583-b513-42ce-a730-07adf7c610fc",
    "metadata": {
     "tags": []
@@ -1578,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "2d0d05f5-a621-4298-b067-5c8849e79abc",
    "metadata": {
     "tags": []
@@ -1590,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "6ac7e58e-711c-48fd-be4a-6cd9dcd4f0ed",
    "metadata": {
     "tags": []
@@ -1609,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "abb798ed-c2db-43d2-b96a-5ce8551b9daa",
    "metadata": {
     "tags": []
@@ -1697,7 +1687,7 @@
        "4       -23.541578       -46.641607  sao paulo         SP        1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "f3438b31-be5d-4c2e-a333-1d2c4f363fa7",
    "metadata": {
     "tags": []
@@ -1720,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "49d4c011-d7db-4be9-982e-ce6adb3936e0",
    "metadata": {
     "tags": []
@@ -1732,7 +1722,7 @@
        "163"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "8fc24325-cf79-4ee4-b08e-2a0ec7632167",
    "metadata": {},
    "outputs": [],
@@ -1760,21 +1750,13 @@
     "cur.close()\n",
     "conn.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06043207-d9bc-400a-b112-3402b0d1794b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.2",
+   "display_name": ".env",
    "language": "python",
-   "name": "myenv"
+   "name": ".env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1786,7 +1768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
